<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        tools:context="com.sample.foo.samplecalculator.MainActivity">

        <TextView
            android:id="@+id/infoTextView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/upColor"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editText"
            android:background="@color/upColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoTextView"
            android:maxLength="25"
            android:enabled="false"
            android:gravity="bottom"
            android:lines="2"
            android:maxLines="2"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:layout_below="@+id/editText"
            android:background="@color/firstLinear">

            <Button
                android:id="@+id/buttonAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/plus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonSubtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonMultiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonDivide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonEqual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/equal"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/openBracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/linear"
            android:text="@string/open_bracket"
            android:textSize="30sp" />

        <Button
            android:id="@+id/closeBracket"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/linear"
            android:layout_toRightOf="@id/openBracket"
            android:text="@string/close_bracket"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonDel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/linear"
            android:layout_toRightOf="@id/closeBracket"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonSeven"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/openBracket"
            android:text="@string/_7"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonEight"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/closeBracket"
            android:layout_toRightOf="@id/buttonSeven"
            android:text="@string/_8"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonNine"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonDel"
            android:layout_toRightOf="@id/buttonEight"
            android:text="@string/_9"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonFour"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonSeven"
            android:text="@string/_4"
            android:textSize="30sp" />


        <Button
            android:id="@+id/buttonFive"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonEight"
            android:layout_alignRight="@id/buttonEight"
            android:text="@string/_5"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonSix"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonNine"
            android:layout_alignRight="@id/buttonNine"
            android:text="@string/_6"
            android:textSize="30sp" />


        <Button
            android:id="@+id/buttonOne"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonFour"
            android:text="@string/_1"
            android:textSize="30sp" />


        <Button
            android:id="@+id/buttonTwo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonFive"
            android:layout_alignRight="@id/buttonEight"
            android:text="@string/_2"
            android:textSize="30sp" />


        <Button
            android:id="@+id/buttonThree"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonSix"
            android:layout_alignRight="@id/buttonNine"
            android:text="@string/_3"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonDot"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonThree"
            android:layout_toRightOf="@id/buttonZero"
            android:text="@string/dot"
            android:textSize="30sp" />

        <Button
            android:id="@+id/buttonZero"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonTwo"
            android:layout_alignRight="@id/buttonEight"
            android:text="@string/_0"
            android:textSize="30sp" />


        <Button
            android:id="@+id/buttonClear"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="133dp"
            android:layout_height="80dp"
            android:layout_below="@id/buttonOne"
            android:text="@string/clear"
            android:textSize="30sp" />


    </RelativeLayout>
</layout>